--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,9 @@ hr {
     display: flex;
     flex-direction: column;
 }
-
+.forms form textarea {
+    resize: none;
+}
 .head-tovar {
     margin-bottom: 50px;
     display: flex;
@@ -127,7 +129,20 @@ hr {
     border: 1px solid #e5e5e5;
 }
 
+.box-element .date input {
+    padding: 15px;
+    border-radius: 3px;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+}
+
 .tovar {
+    display: flex;
+    gap: 24px;
+}
+
+.date {
+    margin-bottom: 16px;
     display: flex;
     gap: 24px;
 }
@@ -142,10 +157,10 @@ hr {
 
 .form-table input {
     width: 100%;
-    border: 1px solid #cccccc;
+    border: 1px solid #ccc;
     padding: 10px;
     border-radius: 3px;
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 .form-table select {
@@ -153,13 +168,18 @@ hr {
     width: 100%;
     padding: 10px;
     border-radius: 3px;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
+    background-color: #fff;
+    border: 1px solid #ccc;
 }
+
 .form-table textarea {
     border-radius: 3px;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+
+.fix-form [type="checkbox"] {
+    width: unset;
 }
 
 .form-table button {
@@ -169,7 +189,7 @@ hr {
     border-radius: 3px;
     background-color: #12d661;
     font-size: 14px;
-    color: #ffffff;
+    color: #fff;
     font-weight: 700;
     font-family: "Roboto";
     text-align: center;
@@ -177,7 +197,8 @@ hr {
 
 /* footer fix-form */
 .fix-form-main {
-    position: absolute;
+    z-index: 1;
+    position: fixed;
     top: 170px;
     right: 101px;
 }
@@ -198,7 +219,7 @@ footer .fix-form-main input {
     border: 1px solid #cccccc;
     padding: 10px;
     border-radius: 3px;
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 footer .fix-form-main a {
