--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h1 {
 
 h2,
 h3 {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     font-size: 20px;
     letter-spacing: 0px;
     text-transform: uppercase;
@@ -68,6 +68,7 @@ hr {
     width: 100%;
     border: 1px solid #ccc;
     padding: 10px;
+    color: #b3b3b3;
     border-radius: 3px;
     background-color: #fff;
 }
@@ -236,7 +237,12 @@ input.checkbox-style:checked+label::after {
     display: flex;
     gap: 24px;
 }
-
+.date-status {
+    font-size: 14px;
+    color: #b3b3b3;
+    font-weight: 700;
+    font-family: "Roboto";
+}
 .date {
     display: flex;
     align-items: center;
@@ -383,6 +389,7 @@ main p {
 }
 
 table {
+    margin-bottom: 35px;
     border-spacing: 15px;
 }
 
@@ -391,7 +398,20 @@ table input[type="text"]:focus {
     filter: drop-shadow(0 0 2.5px rgba(62, 106, 255, 0.55));
     border: 1px solid #3e6aff;
 }
-
+.email-form {
+    padding: 5px;
+    font-size: 14px;
+    color: #b3b3b3;
+    font-weight: 400;
+    font-family: "Roboto";
+}
+.message {
+    padding: 8px 6px;
+    font-size: 14px;
+    color: #b3b3b3;
+    font-weight: 400;
+    font-family: "Roboto";
+}
 table tr td input {
     width: 100%;
     padding: 10px;
@@ -579,7 +599,10 @@ footer .fix-form {
     padding: 25px;
     background-color: #fafafa;
 }
-
+.failed-password {
+    gap: 10px;
+    display: flex;
+}
 footer .fix-form p {
     font-size: 13px;
     color: #b3b3b3;
