--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,6 @@ input.checkbox-style:checked+label::after {
     -moz-appearance: none;
     outline: none;
     border-radius: 50%;
-    border: 2px solid #2196F3;
     display: inline-block;
     cursor: pointer;
 }
@@ -628,7 +627,7 @@ footer .form-table-info .rules {
 .acceptance-form {
     display: flex;
     flex-direction: row;
-    gap: 335px;
+    justify-content: space-between;
 }
 .acceptance-form .cancel button:hover{
     filter: drop-shadow(2px 4px 6px rgb(64, 65, 64));
