--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ hr {
 }
 
 .forms form select {
+    outline: none;
     padding: 10px;
     border-radius: 3px;
     background-color: #fff;
@@ -502,7 +503,7 @@ form .gender input+label::after {
     background-color: #fff;
     border-radius: 11px;
     transform: translateY(70%);
-    top: -54%;
+    top: -55%;
     left: 3px;
 }
 
@@ -637,6 +638,7 @@ table input[type="radio"] {
 
 
 /* table 05 */
+
 footer .form-table-info p {
     margin-bottom: 22px;
     font-size: 18px;
@@ -694,14 +696,16 @@ footer .form-table-info .rules {
     color: #1f222c;
     font-family: "Roboto";
 }
-
+.pad {
+    padding: 9px;
+}
 /* Стилізація для випадаючого списку */
 #country {
     -webkit-appearance: none;
     /* Вимикає стандартний вигляд браузера */
     -moz-appearance: none;
     appearance: none;
-    padding: 10px;
+    padding: 8px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -880,7 +884,6 @@ footer form {
     position: relative;
     width: 15px;
     height: 15px;
-    background-color: #f0f0f0;
     border: 1px solid #cccccc;
     border-radius: 4px;
     margin-right: 8px;
