--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ main p {
 
 table {
     margin-bottom: 35px;
-    border-spacing: 15px;
+    border-spacing: 0 15px;
 }
 
 table [type="file"]+label:hover {
